--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Project 2</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Hello world</h1>
+    </div>
 </body>
 </html>
